backend/k8s/overlays/dev/database.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oetzi-database-deployment
spec:
  template:
    spec:
      containers:
        - name: pg
